SpoqaHanSans-kr.css protocol 변경 & GA 코드 추가

--- a/20170618/index.html
+++ b/20170618/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-	<link href="http://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel="stylesheet" type="text/css">
+	<link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="./framework/reveal/3.4.1/css/reveal.css">
 	<link rel="stylesheet" href="./fonts/font-awesome.min.css">
 	<link rel="stylesheet" href="./framework/prismjs/prism.css">
@@ -11,6 +11,14 @@
 	<link rel="stylesheet" href="./css/style.css">
 	<title>Web Accessiblity</title>
 	<script src="./framework/reveal/3.4.1/lib/js/head.min.js"></script>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-55718543-5', 'auto');
+		ga('send', 'pageview');
+	</script>
 </head>
 <body>
 	<div class="reveal">
